# rosettadrone

./: .gitattributes  .gitignore  .project  INTENT.md  LICENSE  README.md  build.gradle  gradle.properties
app/: .project  CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: APMArduCopterMockLink.txt  DJIMock.txt  test.py
app/src/main/cpp/: Android.mk  Application.mk  Application64.mk  cmdutils.h  config.h  dji_video_jni.c  ffmpeg.h  video_encoder.c
app/src/main/cpp/lib/: Android.mk
app/src/main/res/animator-v21/: appbar_elevation.xml
app/src/main/res/color/: nav_text.xml  safety.xml
app/src/main/res/drawable/: ic_arrow_down_indicator_24dp.xml  ic_baseline_connected_24px.xml  ic_down_arrow_green_24dp.xml  ic_down_arrow_red_24dp.xml  ic_drone_green_24dp.xml  ic_drone_red_24dp.xml  ic_file_download_black_24dp.xml  ic_lock_open_black_24dp.xml  ic_outline_disconnected_24px.xml  ic_outline_settings_24dp.xml  ic_up_arrow_green_24dp.xml  ic_up_arrow_red_24dp.xml  round_btn_dark.xml  uxsdk_background_black_rectangle.xml  uxsdk_flyzone_legend_drawable.xml  uxsdk_ic_compass_aircraft.xml  uxsdk_ic_flyzone_locked.xml  uxsdk_ic_flyzone_unlocked.xml  uxsdk_ic_home.xml  uxsdk_ic_person.xml  uxsdk_ic_person_log_in.xml  uxsdk_ic_person_log_out.xml  uxsdk_ic_simulator.xml  uxsdk_ic_simulator_active.xml
app/src/main/res/drawable-anydpi-v24/: uxsdk_ic_map_gimbal_yaw.xml
app/src/main/res/drawable-hdpi/: ic_down_arrow_white_24dp.xml  ic_drone.xml  ic_lock_outline_secondary_24dp.xml  ic_lock_outline_white_24dp.xml  ic_up_arrow_white_24dp.xml  menubackground.xml
app/src/main/res/drawable-mdpi/: selector_white_gray.xml
app/src/main/res/drawable-xhdpi/: round_btn_disable.xml  round_btn_normal.xml  selector_back_button.xml
app/src/main/res/layout/: activity_connection.xml  activity_gaode.xml  activity_gui.xml  activity_help.xml  activity_main.xml  activity_settings.xml  activity_waypoint1.xml  activity_waypoint2.xml  ai_layout.xml  (+15 more)
app/src/main/res/layout-land/: activity_connection.xml  activity_help.xml  activity_main.xml  ai_selector.xml  dialog_waypointsetting.xml
(+2596 files in other folders)
